<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:apps="http://schemas.android.com/tools">

    <!--Displays a "Sort By" menu action-->
    <item
        android:id="@+id/menu_main_action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="2"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <!--Displays option to sort by popularity-->
                <item
                    android:id="@+id/menu_main_action_sort_popularity"
                    android:checked="true"
                    android:orderInCategory="100"
                    android:title="@string/order_by_popularity_label"
                    apps:showAsAction="never" />

                <!--Displays option to sort by rating-->
                <item
                    android:id="@+id/menu_main_action_sort_rating"
                    android:orderInCategory="100"
                    android:title="@string/order_by_rating_label"
                    apps:showAsAction="never" />

                <!--Displays option to view favourites-->
                <item
                    android:id="@+id/menu_main_action_sort_favourites"
                    android:orderInCategory="100"
                    android:title="@string/order_by_favourites_label"
                    apps:showAsAction="never" />

            </group>
        </menu>
    </item>
</menu>